<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/detail_padding"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/infoLayouts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_padding"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/user_img"
                    android:layout_width="@dimen/user_info_img_size"
                    android:layout_height="@dimen/user_info_img_size"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/name_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_padding"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_padding"
                        android:text="@string/user_name_title"
                        android:textSize="@dimen/user_detail_font"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_real_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:padding="@dimen/small_padding"
                        android:textSize="@dimen/user_detail_small_font" />
                </LinearLayout>
                >

                <LinearLayout
                    android:id="@+id/id_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_padding"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_padding"
                        android:text="@string/user_id_title"
                        android:textSize="@dimen/user_detail_font"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:padding="@dimen/small_padding"
                        android:textSize="@dimen/user_detail_small_font" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/location_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_padding"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_padding"
                        android:text="@string/user_location_title"
                        android:textSize="@dimen/user_detail_font"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:padding="@dimen/small_padding"
                        android:textSize="@dimen/user_detail_small_font" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/blog_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_padding"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_padding"
                        android:text="@string/user_blog_title"
                        android:textSize="@dimen/user_detail_font"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_blog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:padding="@dimen/small_padding"
                        android:textSize="@dimen/user_detail_small_font" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/bio_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small_padding"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/detail_padding"
                        android:text="@string/user_bio_title"
                        android:textSize="@dimen/user_detail_font"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_blo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_padding"
                        android:padding="@dimen/small_padding"
                        android:textSize="@dimen/user_detail_small_font" />
                </LinearLayout>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/loading_progress"
                android:layout_width="@dimen/progressbar_size"
                android:layout_height="@dimen/progressbar_size" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>